<resources>
    <string name="app_name">JoinBridgeCall</string>
    <string name="action_settings">Settings</string>
    <string name="txt_no_data">No data found! Please add one.</string>
    <string name="txt_header_add_data">Add/Update call detail</string>
    <string name="btn_add_update">Add/Update</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone">Phone/Dial-in Number</string>
    <string name="txt_header_screen1">All Added Bridge/Conference Names</string>

    <string name="hint_bridge">Bridge/Conference Number</string>
    <string name="hint_passcode">Passcode</string>


</resources>
