<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="20sp"
        android:text="@string/txt_header_add_data"
        android:textStyle="bold"
        android:gravity="center_horizontal"/>

    <EditText
        android:inputType="text"
        android:layout_marginTop="60dp"
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:maxLines="1"
        android:padding="20dp" />

    <EditText
        android:inputType="number"
        android:maxLength="15"
        android:id="@+id/edt_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_name"
        android:hint="@string/hint_phone"
        android:maxLines="1"
        android:padding="20dp" />

    <EditText
        android:inputType="number"
        android:id="@+id/edt_bridge_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_bridge"
        android:maxLines="1"
        android:padding="20dp"
        android:layout_below="@id/edt_phone_number"
        />

    <EditText
        android:inputType="number"
        android:id="@+id/edt_passcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_passcode"
        android:maxLines="1"
        android:padding="20dp"
        android:layout_below="@id/edt_bridge_number"/>

    <Button
        android:background="@android:color/black"
        android:id="@+id/btn_add_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_update"
        android:textColor="@android:color/white"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/edt_passcode"/>
</RelativeLayout>
